<resources>
    <string name="app_name">Masseging</string>
    <string name="action_settings">Settings</string>
    <string name="student">Student</string>
    <string name="rides">rides</string>
    <string name="emplyees">Emplyees</string>
    <string name="ridesMangment">Rides</string>
    <string name="rides2">Rides</string>
    <string name="maps">maps</string>
    <string name="masseging">masseging</string>
    <string name="map">Map</string>
    <string name="masseges">Masseges</string>
    <string name="mangment">Mangment</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="school">School</string>
    <string name="title_activity_chat">chat</string>
    <string name="title_activity_student_mangment">StudentMangment</string>
    <string name="title_activity_rides_">Rides_Activity</string>
    <string name="search">Search</string>
</resources>
